Bug 1438397 - Don't process RepaintSelection() if the presshell is being destroyed. r=masayuki

MozReview-Commit-ID: 4vihEDBw7BH